--- a/app/components/components.module.scss
+++ b/app/components/components.module.scss
@@ -1,32 +1,37 @@
 .navbar{
-    @apply uppercase text-4xl fixed text-white;
+    @apply uppercase z-50 text-4xl fixed text-white;
     font-family: 'MadeOuterThin';
     .navbarPc{
-        @apply hidden fixed top-[30px] left-[50%] -translate-x-[50%] lg:flex h-[105px] flex-row justify-center items-center w-screen max-w-[1600px];
-        .pcNav{
-            @apply w-full h-full flex flex-row justify-between items-center rounded-xl px-8;
-            background: rgba(50, 38, 75, 0.5);
-            backdrop-filter: blur(10px);
-            a{
-                @apply text-base px-10 text-center py-3 border-0 border-y-[1px] rounded-2xl;
-                font-family: 'MadeOuterThin';
-                font-weight: 250;
-                height: 52px;
-                letter-spacing: 0.4em;
-                text-align: center;
-                border-radius: 10px;
-                opacity: 0px;
-                background: linear-gradient(134.44deg, rgba(188, 104, 255, 0.1) -21.06%, rgba(53, 12, 140, 0.1) 88.67%); 
-                border: 1px 0px 1px 0px solid white;
+        @apply hidden md:flex flex-row justify-between items-center bg-opacity-25 w-screen max-w-7xl py-2 px-10 rounded-3xl fixed top-[30px] left-[50%] -translate-x-[50%] ;
+        background: rgba(65, 54, 88, 0.4);
+        backdrop-filter: blur(15px);
+    }
+    .menuPc{
+        @apply fixed z-40 w-[60%] overflow-hidden bg-black bg-opacity-25 h-screen top-0 right-0 flex flex-col justify-center items-start py-10 gap-20; 
+        backdrop-filter: blur(15px);
+        .linkMenu{
+            @apply relative uppercase w-full pl-20 text-5xl scale-95 hover:scale-100 transition-all ease-in-out duration-500 text-left;
+            font-family: 'MadeOuter';
+            font-weight: 400;
+            line-height: 88.55px;
+            letter-spacing: 0.4em;
+            div{
+                @apply absolute flex-row top-[60%] translate-y-[-50%] justify-center items-center right-0 w-full;
+                animation: textBack 20s linear infinite;
+                span{
+                    @apply text-7xl text-[#EEDDFF] text-opacity-15;
+                }
+                @keyframes textBack {
+                    0%{
+                        right: 0;
+                    }
+                    100%{
+                        right: 80%;
+                    }
+                }
             }
-        }
-        .pcLogo{
-            @apply w-[413.5px] h-[178.5px] absolute max-w-[413.5px] flex flex-col justify-center items-center;
-            background: linear-gradient(180deg, #100021 0%, #24083F 100%);
-            box-shadow: 0px -8px 42.1px 0px #603C7C33;
-            clip-path: polygon(0% 0%, 100% 0%, 75% 100%, 25% 100%);
-            img{
-                @apply w-full max-w-[172px];
+            img{ 
+                @apply absolute top-[50%] translate-y-[-50%] rounded-3xl right-[20px];
             }
         }
     }
