--- a/app/globals.css
+++ b/app/globals.css
@@ -2,18 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Quattrocento:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lexend+Zetta:wght@100..900&display=swap");
+:root {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+
+  --color-main: #b787f5;
+  --color-bg-black: #0a0a0f;
+}
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Orbitron:wght@400..900&display=swap");
 
 @font-face {
-  font-family: MadeOuter;
-  src: url("/fonts/madeOuterReg.otf");
+  font-family: "Thunder";
+  src: url("/fonts/Thunder.ttf");
 }
-@font-face {
-  font-family: MadeOuterThin;
-  src: url("/fonts/madeOuterThin.otf");
-}
-@font-face {
-  font-family: MadeOuterBlack;
-  src: url("/fonts/madeOuterBlack.otf");
+
+body {
+  width: 100%;
+  overflow-x: hidden;
 }
