--- a/app/accueil/accueil.module.scss
+++ b/app/accueil/accueil.module.scss
@@ -262,7 +262,7 @@
         }
     }
     .galleryHandWrapper{
-        @apply absolute flex flex-col mt-0 w-full max-w-[1800px] h-full top-0 left-0 z-20;
+        @apply absolute flex flex-col mt-0 w-full max-w-[1800px] h-full top-0 z-20;
         .galleryHand{
             @apply flex flex-col justify-center items-center relative w-full;
             .handImg{
